[gd_scene load_steps=8 format=3 uid="uid://bk8xk5nmsb7sg"]

[ext_resource type="Script" path="res://shop.gd" id="1_qhkvx"]
[ext_resource type="PackedScene" uid="uid://i2kkk83xthnh" path="res://Item.tscn" id="2_5bt3u"]

[sub_resource type="Animation" id="Animation_frq7u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -300)]
}

[sub_resource type="Animation" id="Animation_xh5ql"]
resource_name = "TransIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -300), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3v3vb"]
resource_name = "TransOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36kjf"]
_data = {
"RESET": SubResource("Animation_frq7u"),
"TransIn": SubResource("Animation_xh5ql"),
"TransOut": SubResource("Animation_3v3vb")
}

[sub_resource type="GDScript" id="GDScript_qpyew"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Gold: \" + str(Global.gold)
"

[node name="Shop" type="CanvasLayer"]
process_mode = 3
offset = Vector2(0, -300)
transform = Transform2D(1, 0, 0, 1, 0, -300)
script = ExtResource("1_qhkvx")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_36kjf")
}

[node name="Panel" type="Panel" parent="."]
offset_left = 64.0
offset_top = 24.0
offset_right = 512.0
offset_bottom = 272.0

[node name="Close" type="Button" parent="."]
offset_left = 448.0
offset_top = 48.0
offset_right = 498.0
offset_bottom = 80.0
text = "Close"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="Control"]
offset_left = 232.0
offset_top = 40.0
offset_right = 336.0
offset_bottom = 66.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Des" type="Label" parent="Control"]
offset_left = 192.0
offset_top = 144.0
offset_right = 384.0
offset_bottom = 224.0
text = "aasdfasdfadsfasdf"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Next" type="Button" parent="Control"]
offset_left = 336.0
offset_top = 80.0
offset_right = 354.0
offset_bottom = 111.0
text = ">"

[node name="Prev" type="Button" parent="Control"]
offset_left = 208.0
offset_top = 80.0
offset_right = 226.0
offset_bottom = 111.0
text = "<"

[node name="Buy" type="Button" parent="Control"]
offset_left = 248.0
offset_top = 232.0
offset_right = 328.0
offset_bottom = 263.0
text = "Purchase"

[node name="Item" parent="Control" instance=ExtResource("2_5bt3u")]
position = Vector2(280, 112)

[node name="Gold" type="Label" parent="."]
offset_left = 72.0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 55.0
script = SubResource("GDScript_qpyew")

[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/Buy" to="." method="_on_buy_pressed"]
